<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">studenthandbookapp</string>
    <string name="leeian_name"><u>LEEIAN MATTHEW P. LACORTE</u></string>
    <string-array name="campus_array">
        <item>PHINMA Araullo University Main</item>
        <item>PHINMA Araullo University South</item>
        <item>PHINMA Araullo University San Jose</item>
        <item>PHINMA Cagayan de Oro College Main</item>
        <item>PHINMA Cagayan de Oro College Puerto</item>
        <item>PHINMA Cagayan de Oro College Iligan</item>
        <item>PHINMA University of Pangasinan Main</item>
        <item>PHINMA University of Pangasinan Urdaneta</item>
        <item>PHINMA University of Iloilo</item>
        <item>Southwestern University PHINMA</item>
        <item>PHINMA Saint Jude College</item>
        <item>PHINMA Republican College</item>
        <item>PHINMA Rizal College of Laguna</item>
        <item>PHINMA Union College of Laguna</item>
        <item>Horizon University</item>
    </string-array>
    <string-array name="course_array">
        <item>AB English Language</item>
        <item>BS Medical Laboratory Science</item>
        <item>BS Criminology</item>
        <item>BS Computer Science</item>
        <item>BS Entrepreneurship</item>
        <item>BS Accounting Information System</item>
        <item>BS Civil Engineering</item>
        <item>BS Architecture</item>
        <item>BS Accountacy</item>
        <item>BS Tourism Management</item>
    </string-array>
    <string name="scholarship_description">
        "Most importantly, our education is affordable. We do not charge any hidden or unnecessary fees. \n\n"
        "We support deserving students throughout their tertiary learning years by offering scholarship programs. \n\n"
        "Our Hawak Kamay Scholarship Program provides 50% to 75% discount on tuition &amp; miscellaneous fees for our more financially-challenged students."</string>
    <string name="scholarships_title"><u>SCHOLARSHIPS</u></string>
    <string name="title_activity_scholarship_page2">ScholarshipPage2</string>
    <string name="action_settings">Settings</string>
    <string name="title_PHINMAScholarship">PHINMA Scholarship \n(formerly Presidential \nScholarship)</string>
    <string name="sch_descriptionScholarshipsList">Check our complete list of scholarships:</string>
    <string name="sch_nextPage">nextpage</string>
    <string-array name="scholarship_titles">
        <item>PHINMA Scholarship (formerly Presidential Scholarship)</item>
        <item>Student Assistance Scholarship</item>
        <item>Valedictorian &amp; Salutatorian Scholarship</item>
        <item>Dean\'s List Scholarship</item>
        <item>With Highest Honor</item>
        <item>PHINMA UPang Direct Dependent Scholarship</item>
        <item>Hawak Kamay Scholarship</item>
        <item>Victory Liner, 5-Star, and Transasia Oil Employee &amp; Direct Dependent Scholarship</item>
        <item>The Medical City Employee &amp; Direct Dependent Scholarship</item>
        <item>Kapamilya @ PHINMA UPang Scholarship</item>
        <item>PHINMA UPang Alumni Scholarship</item>
    </string-array>
    <string name="flex24_description" tools:ignore="PluralsCandidate">
        • A combination of studying in school and studying at home.\n\n
        • 2 days face-to-face and 4 days remote learning.\n\n
        • Teacher support will be via text, call and social media during the remote coaching.
    </string>
    <string name="flex_remote_description" tools:ignore="PluralsCandidate">
        • Largely home-based learning;\n\n
        • Suited for regular students who live far away and have difficulties traveling to come to school.\n\n
        • Learn online together with your classmates.\n\n
        • Teacher support will be via text, call and social media during the remote coaching.
    </string>
    <string name="scholarship_1" tools:ignore="PluralsCandidate">
        <b>Benefits:</b>\n
        • 100% discount on tuition &amp; miscellaneous fees for 4 or 5 years\n
        • ₱4,000 monthly allowance for Honors or Top 10 Grade 12 students who passed the qualifying exam.\n\n
        <b>Maintenance:</b>\n
        • Service of 2 hrs/day at assigned department\n
        • No grade below 2.0\n
        • Average must be 1.75 or above\n
        • Applicable during summer if required in the curriculum.\n\n
        <b>Requirements:</b>\n
        • Scholarship Acceptance letter from Office of the President\n
        • Enrollment Registration\n\n
    </string>
    <string name="scholarship_2">
        <b>Benefits:</b>\n
        • 100% off the tuition (21 units only)\n\n
        <b>Eligibility:</b>\n
        • Must be in good class standing\n
        • Service of 4 hrs/day at assigned department\n
        • Must have passing grades\n
        • Not applicable during summer.\n\n
        <b>Requirements:</b>\n
        • Should pass the examination and interview\n\n
    </string>
    <string name="scholarship_3">
        <b>Benefits:</b>\n
        • 100% (Valedictorian) off the tuition for semester upon entry only.\n
        • 50% (Salutatorian) off the tuition for semester upon entry only.\n\n
        <b>Requirements:</b>\n
        • Certificate from Principal\n
        • Birth Certificate\n
        • Enrollment Registration\n\n
    </string>
    <string name="scholarship_4" tools:ignore="StringFormatInvalid">
        <b>Benefits:</b>\n
        • 100% coverage of tuition fees for the top 10 for the semester following the Dean’s List award\n
        • 50% off the tuition fee for the top 11-25 for the semester following the Dean’s List award\n\n
        <b>Requirements:</b>\n
        • Grades (to be applied in the Registrar)\n\n
    </string>
    <string name="scholarship_5">
        <b>Benefits:</b>\n
        • 100% off the tuition for semester upon entry only.\n\n
        <b>Requirements:</b>\n
        • Certificate from Principal\n
        • Birth Certificate\n
        • Enrollment Registration\n\n
    </string>
    <string name="scholarship_6">
        <b>Benefits:</b>\n
        • 100% (with duty) or 50% off the tuition fee\n\n
        <b>Eligibility:</b>\n
        • Must be in good class standing\n
        • No maintaining grade.\n
        • Applicable during regular semester and summer.\n\n
        <b>Requirements:</b>\n
        • Birth Certificate of the child to be presented to UPang HRD\n
        • Certification of Employment from UPang HRD\n
        • Enrollment Registration\n\n
        <b>Maintenance:</b>\n
        • The student must be a part of the top 11-25 of the Dean’s List who are not Presidential, Gov. Moreno, OJH, 1 of 100, or College scholar.\n
        • The student must not have a mark of Incomplete, Dropped or Failed.\n
        • The student must have a full load or at least 21 units for irregular students.\n
        • The student must not have any disciplinary sanction.\n\n
    </string>
    <string name="scholarship_7">
        <b>Benefits:</b>\n
        • HK5.5 (₱5,500 per semester)\n
        • HK7.5 (as low as ₱7,500 per semester)\n
        • HK10 (as low as ₱10,000 per semester)\n
        • HK12.5 (as low as ₱12,000 per semester)\n
        ** Books and uniforms not included\n\n
        <b>Requirements:</b>\n
        • Must pass exam given at the Marketing Dept.\n
        • No maintaining grade\n\n
    </string>
    <string name="scholarship_8">
        <b>Benefits:</b>\n
        • 25% off the tuition fee\n
        • Renewable as long as the parent is an employee of the above\n\n
        <b>Eligibility:</b>\n
        • Must be in good class standing\n
        • No maintaining grade\n
        • Not applicable during summer.\n\n
        <b>Requirements:</b>\n
        • Certificates of Employment of Parents\n
        • Employment ID\n
        • Birth Certificates of Child\n
        • Enrollment Registration\n\n
    </string>
    <string name="scholarship_9">
        <b>Benefits:</b>\n
        • 50% off the tuition fees\n
        • Renewable as long as the parent is still connected in the TMC\n\n
        <b>Eligibility:</b>\n
        • Must be in good class standing\n
        • No maintaining grade\n
        • Applicable during regular semester and summer\n\n
        <b>Requirements:</b>\n
        • Certificates of Employment from TMCHR\n
        • Employment ID\n
        • Birth Certificates of Child\n
        • Enrollment Registration\n\n
    </string>
    <string name="scholarship_10">
        <b>Benefits:</b>\n
        • 10% off the tuition for 2 siblings, plus 5% to each additional sibling enrolled in the University (basic education or college)\n\n
        <b>Eligibility:</b>\n
        • No maintaining grades\n
        • Applicable during summer if required in the curriculum\n\n
        <b>Requirements:</b>\n
        • Birth Certificates of each sibling\n
        • Certificate of Matriculation\n\n
    </string>
    <string name="scholarship_11">
        <b>Benefits:</b>\n
        • 10% off the tuition fee for graduates of the University (including Basic Education) and their direct dependents\n\n
        <b>Eligibility:</b>\n
        • Must be in good class standing\n
        • No maintaining grade\n
        • Not applicable during summer\n\n
        <b>Requirements:</b>\n
        • Alumni card from Alumni Office / Parent’s Diploma / OTR\n
        • Birth Certificate of the Child\n
        • Enrollment Registration
    </string>
    <string name="mapsTitle">
        <u>SCHOOL MAP</u>
    </string>
    <string name="groundFloor">
        <u>GROUND FLOOR</u>
    </string>
    <string name="secondFloor">
        <u>SECOND FLOOR</u>
    </string>
    <string name="thirdFloor">
        <u>THIRD FLOOR</u>
    </string>
    <string name="fourthFloor">
        <u>FOURTH FLOOR</u>
    </string>
    <string name="fifthFloor">
        <u>FIFTH FLOOR</u>
    </string>
    <string name="schoolAddress">
        McArthur Highway, Urdaneta City, 2428, Pangasinan
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="event">
        <item>Show: All Events</item>
        <item>Hackathons</item>
        <item>Workshops</item>
        <item>Seminars</item>
        <item>Competitions</item>
    </string-array>
    <string name="title_activity_video_card">VideoCard</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="scholarship_banner">scholarship banner</string>
</resources>