<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".scholarships.ScholarshipPage1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="581dp"
        android:background="@drawable/sch_custom_bg_page1"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="89dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/sch_phinmalogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/scholarships_title"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="355dp"
            android:layout_height="256dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/scholarship_description"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="125dp"
            app:srcCompat="@drawable/sch_hands" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/sch_descriptionScholarshipsList"
            android:textSize="20sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_scholarshipslist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFD000"
            android:contentDescription="@string/sch_nextPage"
            android:src="@drawable/sch_ic_downward"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>